# OSS-tic-tac-teo

./: .gitignore  CMakeLists.txt  DEVELOPE.md  Makefile  README.md  TicTacToe.c  TicTacToe_linux  game_rules.h  win_game.c
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: -add-feature--기능-추가-이슈-템플릿.md  -clean-code---add-feature---fix-bug--이슈-제목.md  -etc--기타-자유양식-템플릿.md  -fix-bug--버그-수정-이슈-템플릿.md
header_for_win/: env.h
headers/: console_output.h  env.h  game_constants.h  game_logic.h  game_menu.h  game_rules.h  main_menu.h  move_cursor.h
headers_for_linux/: env.h
headers_for_win/: move_cursor.h
src/: console_output.c  game_logic.c  game_menu.c  game_rules.c  main.c  main_menu.c  move_cursor.c
src_for_linux/: env.c  move_cursor.c
src_for_win/: env.c  move_cursor.c
